# Compnet_MPOSH_case5

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  starter.py
instance/: auth.db
migrations/versions/: 14d8cf62b6b4_6_migration.py  89152c2b5522_add_count_column_to_applications_table.py  f9a06ee740af_5_migration.py
nginx/: default.conf  deploy.conf  nginx.conf
parser_model/: market_parser.py
src/: Yandex_OAuth.py  __init__.py  admin_routers.py  bitrix.py  buy_routers.py  main_routers.py  models.py  routers.py  user_routers.py
src/migrations/versions/: 5fcd87e072ed_add_count_column_to_applications_table.py
src/parser_model/: func.py  market_parser.py
src/routers/: admin_routers.py  buy_routers.py  log_routers.py  user_routers.py
src/static/: AJAX.js  style.css
src/templates/: account.html  add_inventory_item.html  admin.html  all_items.html  applications.html  base.html  buy.html  edit_applet.html  edit_item.html  get_user_applet.html  index.html  login_page.html  logs_main.html  my_inventory.html  register_page.html  test.html
src/templates/arch/: links.html
src/tests/: test_app.py
