[tool.poetry]
name = "compnet"
version = "0.1.0"
description = ""
authors = [" Ivan Ruchkin "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.2"
flask = "3.1.0"
flask-login = "0.6.3"
flask-sqlalchemy = "3.1.1"
python-dotenv = "1.0.1"
requests = "2.32.3"
selenium = "4.27.1"
sqlalchemy = "2.0.31"
werkzeug = "3.1.3"
flask-migrate = "^4.0.7"
ngrok = "^1.4.0"
gunicorn = "^23.0.0"
authlib = "^1.4.0"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
undetected-chromedriver = "3.5.5"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
